Resolve responsive issues and formating all code and remove unused code

--- a/src/AboutUs.html
+++ b/src/AboutUs.html
@@ -82,8 +82,6 @@
                     <img class="img-fluid" src="images/aboutUs_2.png" alt="on-demand">
                 </div>
                 <div class="col-md-6 employDownRight mt-md-5  pl-md-5">
-                    <!-- <h2 class="pl-md-4 ml-md-1 mt-4 mt-sm-0"> <span class="colorText">On-demand</span> learning and
-                        support</h2> -->
                     <p class="pl-md-4 ml-md-1 py-2 aboutUsBannerDescription pt-lg-5">For the duration of four weeks, candidates will build work-relevant knowledge and aptitudes through a series of real-life, industry-level tasks and projects, while receiving personalized guidance, advice and support from their mentors. Through this extensive undertaking, they can have a positive taste of working life and gain solid experience that will enable them to secure and sustain employment in the tech sector.  </p>
                 </div>
             </div>
@@ -239,7 +237,7 @@
         <div class="row employDown mt-lg-4 pt-md-4 pb-lg-5 mb-md-5">
 
             <div class="col-md-6 employDownRight mt-md-5  pr-md-5">
-                <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Don't just take our <span class="colorText">word</span> for <br class="d-none d-md-block"> it</h2>
+                <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Don't just take our <span class="colorText">word</span> <br class="d-none d-md-block"> for it</h2>
                 <p class="pr-md-4 mr-md-1 py-2 aboutUsBannerDescription">Techway Placements has already provided transformative work experiences to thousands of young people. Be one of them and see your tech career grow.
                 </p>
             </div>
@@ -278,7 +276,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
