--- a/src/Recruiters.html
+++ b/src/Recruiters.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Career Club</title>
+    <title>Recruiters</title>
 
     <!-- --------------- Google Fonts -------------- -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -71,7 +71,6 @@
                         you outpace your competitors and satisfy the requirements of the clients you work with. Here’s
                         what you can expect from us as a partner.
                     </p>
-                    <!-- <button class="btn button mt-4">See prospective employees</button> -->
                 </div>
                 <div class="col-md-6 mt-md-5 pl-md-5">
                     <img class="img-fluid" src="images/reqruitersBanner.png" alt="reqruitersBanner">
@@ -84,8 +83,6 @@
 
     <section id="employmentMarket" class="aboutUs realValueCards">
         <div class="container extraPadding ">
-            <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
-              <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0 mt-md-5 py-md-5">
 
                 <div class="card-deck">
@@ -225,7 +222,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
@@ -287,8 +284,6 @@
                         <ul class="list-unstyled pt-2">
                             <li> <a href="#">About Us</a> </li>
                             <li> <a href="#">Testimonials</a> </li>
-                            <!-- <li> <a href="#">Mentors</a> </li>
-                            <li> <a href="#">Case Study</a> </li> -->
                         </ul>
                     </div>
                     <div class="col-md-3">
