--- a/src/WhyHireOurGraduates.html
+++ b/src/WhyHireOurGraduates.html
@@ -157,7 +157,7 @@
             <div class="row employDown mt-lg-4 pt-md-4 pb-lg-5">
 
                 <div class="col-md-7 employDownRight mt-md-5  pr-md-5">
-                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Find your next great hire at <span
+                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Find your next great hire at <br class="d-none d-md-block"> <span
                             class="colorText">Techway Placements</span></h2>
                     <p class="pr-md-4 mr-md-1 py-4 aboutUsBannerDescription">We work with a number of amazing companies
                         that have filled their open positions with high-performing graduates from our programs. Be one
@@ -208,7 +208,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
@@ -270,8 +270,6 @@
                         <ul class="list-unstyled pt-2">
                             <li> <a href="#">About Us</a> </li>
                             <li> <a href="#">Testimonials</a> </li>
-                            <!-- <li> <a href="#">Mentors</a> </li>
-                            <li> <a href="#">Case Study</a> </li> -->
                         </ul>
                     </div>
                     <div class="col-md-3">
