--- a/src/employerExperience.html
+++ b/src/employerExperience.html
@@ -75,8 +75,6 @@
 
     <section id="employmentMarket" class="aboutUs realValueCards extraBg">
         <div class="container extraPadding ">
-            <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
-              <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0">
                 <div class="col-12 mt-md-5">
                     <div class="row mr-1 d-flex justify-content-center peopleControlInExperience">
@@ -99,8 +97,6 @@
 
     <section id="employmentMarket" class="aboutUs realValueCards">
         <div class="container extraPadding mt-4">
-            <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
-              <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0">
                 <div class="col-12 mt-md-5 mt-5">
                     <div class="row mr-1 d-flex justify-content-center peopleControlInExperience">
@@ -125,8 +121,6 @@
 
     <section id="employmentMarket" class="aboutUs realValueCards">
         <div class="container extraPadding mt-4">
-            <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
-              <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0">
                 <div class="col-12 mt-md-5 mt-5">
                     <div class="row mr-1 d-flex justify-content-center peopleControlInExperience">
@@ -160,7 +154,7 @@
             <div class="row employDown mt-lg-4 pt-md-4 pb-lg-5">
 
                 <div class="col-md-7 employDownRight mt-md-5  pr-md-5">
-                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Find your next great hire at <span
+                    <h2 class="pr-md-4 mr-md-1 mt-4 mt-sm-0"> Find your next great hire at <br class="d-none d-md-block"> <span
                             class="colorText">Techway Placements</span></h2>
                     <p class="pr-md-4 mr-md-1 py-4 aboutUsBannerDescription">We work with a number of amazing companies
                         that have filled their open positions with high-performing graduates from our programs. Be one
@@ -211,7 +205,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
@@ -273,8 +267,6 @@
                         <ul class="list-unstyled pt-2">
                             <li> <a href="#">About Us</a> </li>
                             <li> <a href="#">Testimonials</a> </li>
-                            <!-- <li> <a href="#">Mentors</a> </li>
-                            <li> <a href="#">Case Study</a> </li> -->
                         </ul>
                     </div>
                     <div class="col-md-3">
