--- a/src/ourPromise.html
+++ b/src/ourPromise.html
@@ -71,7 +71,6 @@
                         to address your entry-level hiring needs, you can expect the following commitments from us,
                         guaranteeing you a pleasant experience throughout.
                     </p>
-                    <!-- <button class="btn button mt-4">See prospective employees</button> -->
                 </div>
                 <div class="col-md-6 mt-md-5 pl-md-5">
                     <img class="img-fluid" src="images/ourPromiseBannerImg.png" alt="promise Banner">
@@ -82,14 +81,12 @@
 
     <section id="employmentMarket" class="aboutUs realValueCards">
         <div class="container extraPadding ">
-            <!-- <h1 class="text-center pb-md-5 pt-md-5 mt-lg-5 mb-4">Know the real <span class="colorText">value </span> our graduates 
-              <br class="d-none d-md-block">  can bring to your company.</h1> -->
             <div class="row ml-0 mt-md-5 pt-md-5">
 
                 <div class="card-deck mt-4 mt-md-0">
                     <div class="card py-4 px-3">
                         <div class="card-body promiseCardRes">
-                            <h5 class="card-title">High-performing candidates</h5><br class="d-none d-md-block">
+                            <h5 class="card-title">High-performing <br class="d-none d-md-block"> candidates</h5>
                             <p class="card-text">All candidates who complete our work experience programs are well
                                 prepared to start their careers. They are equipped with the right industry experience
                                 and skills that will ensure they can bring real value to your company. </p>
@@ -116,7 +113,7 @@
                 <div class="card-deck mt-md-5">
                     <div class="card py-4 px-3">
                         <div class="card-body promiseCardRes">
-                            <h5 class="card-title">Information confidentiality</h5><br class="d-none d-md-block">
+                            <h5 class="card-title">Information <br class="d-none d-md-block"> confidentiality</h5>
                             <p class="card-text">Whatever information you provide to us, we will make sure to keep it
                                 confidential, unless you agree to its disclosure. This is one way of demonstrating our
                                 commitment to protect your information as our partner for providing employment.</p>
@@ -206,7 +203,7 @@
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
@@ -268,8 +265,6 @@
                         <ul class="list-unstyled pt-2">
                             <li> <a href="#">About Us</a> </li>
                             <li> <a href="#">Testimonials</a> </li>
-                            <!-- <li> <a href="#">Mentors</a> </li>
-                            <li> <a href="#">Case Study</a> </li> -->
                         </ul>
                     </div>
                     <div class="col-md-3">
