--- a/src/studentCareerClub.html
+++ b/src/studentCareerClub.html
@@ -56,11 +56,8 @@
 
     <!-- ========================= employment market Part Start ==================== -->
 
-    <section id="employmentMarket" class="aboutUs">
+    <section id="employmentMarket" class="aboutUs extraBg">
         <div class="container pt-lg-5 pt-3 extraPadding pb-lg-4 mb-lg-5">
-
-            <!-- ========================= employment market Down Part Start ==================== -->
-
             <div class="row employDown mt-lg-4 pt-md-4">
 
                 <div class="col-md-6 employDownRight mt-md-5  pr-md-5">
@@ -74,7 +71,13 @@
                     <img class="img-fluid" src="images/student_1.png" alt="student_1">
                 </div>
             </div>
+</div>
+    </section>
 
+    <section id="employmentMarket" class="aboutUs">
+        <div class="container pt-lg-5 pt-3 extraPadding pb-lg-4 mb-lg-5">
+
+            <!-- ========================= employment market Down Part Start ==================== -->
 
             <div class="row employDown mt-lg-4 pt-lg-4">
                 <div class="col-md-6 mt-md-5">
@@ -97,10 +100,6 @@
                 assist our graduates.</h1>
             <div class="row mb-lg-5 pb-lg-5">
                 <div class="col-md-6 mt-lg-5 techwayLeft">
-
-                    <!-- <h2 class="py-3">
-                        <span class="colorText">Techway Placements</span> redefines gaining valuable work experience.
-                    </h2> -->
                     <p class="">The recruiters we have partnered with have an incomparable insight into what companies
                         are looking for when hiring candidates. They also know where to look for opportunities and what
                         steps candidates can take to make themselves more attractive to prospective employers. If you
@@ -155,20 +154,20 @@
     <!-- ========================= employment market Part End ==================== -->
 
 
-    <!-- ======================= Footer Part Start ================= -->
+     <!-- ======================= Footer Part Start ================= -->
 
-    <section id="footer" class="footer banner">
+     <section id="footer" class="footer banner">
         <div class="container extraMarginbyPadding px-3 px-sm-0">
             <div class="row py-lg-5">
                 <div class="col-md-5 bannerLeft">
-                    <h1 class="banner-title">
+                    <h1 class="banner-title busFooterTitle">
                         <span class="d-block">Choose <span class="colorText">Techway Placements</span> for </span>
                         <span class="d-block">better career prospects</span>
                     </h1>
                     <p class="banner-description py-2 py-md-4">Push yourself to do amazing things. Techway Placements is
                         your partner in gaining valuable work experience that will benefit you with in-demand workplace
                         skills and better career prospects. </p>
-                    <h5 class="text-left story pb-3 mt-4 mt-md-0 career">Build Your Career - Subscribe </h5>
+                    <h5 class="text-left story pb-3 mt-4 mt-md-0 career">Build Your Career - It's Free to Join! </h5>
                     <div class="bannerForm">
                         <form class="form-inline">
                             <input type="text" class="form-control mb-2 mr-sm-2" id="email" placeholder="Your email"
@@ -181,7 +180,7 @@
                     <ul class="list-unstyled">
                         <div class="d-flex ml-md-4">
                             <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
-                            <li>Suitable for new graduates</li>
+                            <li>Absolutely FREE to join</li>
                         </div>
                         <div class="d-flex ml-md-4">
                             <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
@@ -189,7 +188,7 @@
                         </div>
                         <div class="d-flex ml-md-4">
                             <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
-                            <li>Mentorship in various sectors </li>
+                            <li>1-on-1 in-depth discussions </li>
                         </div>
                         <div class="d-flex ml-md-4">
                             <img class="img-fluid mr-2 mt-2" src="images/check.png" alt=" check">
@@ -223,8 +222,6 @@
                         <ul class="list-unstyled pt-2">
                             <li> <a href="#">About Us</a> </li>
                             <li> <a href="#">Testimonials</a> </li>
-                            <li> <a href="#">Mentors</a> </li>
-                            <li> <a href="#">Case Study</a> </li>
                         </ul>
                     </div>
                     <div class="col-md-3">
