--- a/src/Mentors.html
+++ b/src/Mentors.html
@@ -63,13 +63,12 @@
     <section id="successStory" class=" caseStudy">
         <div class="container  extraPadding pb-2 pb-lg-5">
 
-            <div class="card-deck mt-md-5 mt-3 mb-5">
+            <div class="card-deck  mt-3 mt-md-0 mb-5">
                 <div class="card">
                     <img src="images/mentor.png" class="card-img-top" alt="lakshami">
                     <div class="card-body">
                         <h3 class="card-title">Abe Cetin <i class="fas fa-chevron-right"></i></h3>
                         <p class="card-text">Data Analysis @ Microsoft</p>
-                        <!-- <img src="images/btn.png" class="img-fluid" alt=""> -->
 
                         <div class=" cardButtonCtrl mb-2">
                             <div class="buttons">
@@ -122,7 +121,6 @@
                     <div class="card-body">
                         <h3 class="card-title">Abe Cetin <i class="fas fa-chevron-right"></i></h3>
                         <p class="card-text">Data Analysis @ Microsoft</p>
-                        <!-- <img src="images/btn.png" class="img-fluid" alt=""> -->
 
                         <div class=" cardButtonCtrl mb-2">
                             <div class="buttons">
@@ -175,7 +173,6 @@
                     <div class="card-body">
                         <h3 class="card-title">Abe Cetin <i class="fas fa-chevron-right"></i></h3>
                         <p class="card-text">Data Analysis @ Microsoft</p>
-                        <!-- <img src="images/btn.png" class="img-fluid" alt=""> -->
 
                         <div class=" cardButtonCtrl mb-2">
                             <div class="buttons">
@@ -231,7 +228,6 @@
                     <div class="card-body">
                         <h3 class="card-title">Abe Cetin <i class="fas fa-chevron-right"></i></h3>
                         <p class="card-text">Data Analysis @ Microsoft</p>
-                        <!-- <img src="images/btn.png" class="img-fluid" alt=""> -->
 
                         <div class=" cardButtonCtrl mb-2">
                             <div class="buttons">
@@ -284,7 +280,6 @@
                     <div class="card-body">
                         <h3 class="card-title">Abe Cetin <i class="fas fa-chevron-right"></i></h3>
                         <p class="card-text">Data Analysis @ Microsoft</p>
-                        <!-- <img src="images/btn.png" class="img-fluid" alt=""> -->
 
                         <div class=" cardButtonCtrl mb-2">
                             <div class="buttons">
@@ -337,7 +332,6 @@
                     <div class="card-body">
                         <h3 class="card-title">Abe Cetin <i class="fas fa-chevron-right"></i></h3>
                         <p class="card-text">Data Analysis @ Microsoft</p>
-                        <!-- <img src="images/btn.png" class="img-fluid" alt=""> -->
 
                         <div class=" cardButtonCtrl mb-2">
                             <div class="buttons">
@@ -457,8 +451,6 @@
                         <ul class="list-unstyled pt-2">
                             <li> <a href="#">About Us</a> </li>
                             <li> <a href="#">Testimonials</a> </li>
-                            <!-- <li> <a href="#">Mentors</a> </li>
-                            <li> <a href="#">Case Study</a> </li> -->
                         </ul>
                     </div>
                     <div class="col-md-3">
